grammer and alignment corrections

--- a/app/View/Themed/Jaxonetic/webroot/css/jax.css
+++ b/app/View/Themed/Jaxonetic/webroot/css/jax.css
@@ -257,7 +257,7 @@ body .home-banner li {
 /* line 128, ../sass/jax.scss */
 body .home-banner li img {
   vertical-align: baseline;
-  margin-left: -180px;
+  margin-left: -150px;
 }
 /* line 132, ../sass/jax.scss */
 body #wrapper {
